--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.7.1",
+    "dotenv": "^16.3.1",
+    "mongoose": "^8.0.3",
+    "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
+    "@types/react": "18.2.47",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "prisma": "^5.7.1",
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.3.3"
   }
 }
